 OmegaT 2.1.7 update 3
----------------------------------------------------------------------
  1 Enhancement
  0 Bugfix
----------------------------------------------------------------------
2.1.7 update 3 vs. 2.1.7 update 2

  Implemented requests:

  - Extended project statistics
  http://sourceforge.net/support/tracker.php?aid=2988953

----------------------------------------------------------------------
 OmegaT 2.1.7 update 2
----------------------------------------------------------------------
  2 Enhancements
  1 Bugfix
----------------------------------------------------------------------
2.1.7 update 2 vs. 2.1.7 update 1

  Other enhancements:

  - Japanese localisation updated to 2.1.x (UI, Readme, Instant Start)

  - When a project is empty, the message mentions the documentation
on supported file formats

  Bug fixes:

  - In some circumstances, the search results could be all highlighted

----------------------------------------------------------------------
 OmegaT 2.1.7 update 1
----------------------------------------------------------------------
  3 Enhancements
  2 Bugfixes
----------------------------------------------------------------------
2.1.7 update 1 vs. 2.1.7

  Implemented requests:

  - Highlight search results
  http://sourceforge.net/support/tracker.php?aid=2956986

  Other enhancements:

  - Danish localisation updated to 2.1.x (UI, Readme, Instant Start)
  - Czech localisation updated to 2.1.x (UI, Readme, Instant Start, documentation)
  
  Bug fixes:

  - Some search options widgets do not set focus to Search field
  http://sourceforge.net/support/tracker.php?aid=3013796

  - Search window - search items containing $ behave strangely
  http://sourceforge.net/support/tracker.php?aid=3021915

----------------------------------------------------------------------
 OmegaT 2.1.7
----------------------------------------------------------------------
  8 Enhancements
  2 Bugfixes